add_subdirectory(thread_pool_plugin)
add_subdirectory(logging_plugin)
add_subdirectory(http_server_plugin)
add_subdirectory(monitor_price_plugin)
add_subdirectory(send_mail_plugin)
add_subdirectory(mysql_plugin)
add_subdirectory(grid_db_plugin)
add_subdirectory(grid_trad_plugin)
add_subdirectory(trad_api_plugin)
add_subdirectory(monitor_mail_plugin)
add_subdirectory(log_server_plugin)

# add_subdirectory(monitor_log_plugin)
# add_subdirectory(redis_plugin)
# add_subdirectory(tcp_plugin)
# add_subdirectory(block_sync_storage_plugin)
# add_subdirectory(block_sync_producer_plugin)
# add_subdirectory(block_sync_plugin)
# add_subdirectory(template_plugin)
# add_subdirectory(kafka_plugin)
 